[package]
name = "subtile"
version = "0.4.0"
edition = "2021"
description = "A crate of utils to operate traitements on subtitles"
repository = "https://github.com/gwen-lg/subtile"
authors = ["Eric Kidd <git@randomhacks.net>", "Gwen Lg <me@gwenlg.fr>"]
keywords = ["subtitle", "library", "parse", "vobsub", "pgs"]
categories = [
    "command-line-utilities",
    "encoding",
    "multimedia::encoding",
    "parser-implementations",
]
license = "LGPL-3.0-or-later"
rust-version = "1.80"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = "0.3"
compact_str = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
iter_fixed = "0.4"
log = "0.4"
nom = "8.0"
profiling = "1.0"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
glob = "0.3"

[lints.rust]
missing_docs = "deny"
unused_imports = "deny"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
bind_instead_of_map = "deny"
borrowed_box = "deny"
cast_lossless = "deny"
cast_possible_wrap = "deny"
checked_conversions = "deny"
clone_on_copy = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
explicit_deref_methods = "deny"
extra_unused_lifetimes = "deny"
future_not_send = "deny"
if_not_else = "deny"
manual_assert = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
nonminimal_bool = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
string_lit_as_bytes = "deny"
trivially_copy_pass_by_ref = "deny"
type-repetition-in-bounds = "deny"
type_repetition_in_bounds = "deny"
unnecessary_semicolon = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
use_self = "deny"
used_underscore_binding = "deny"
useless_conversion = "deny"
