[package]
name = "subtile"
version = "0.4.0"
edition = "2021"
description = "A crate of utils to operate traitements on subtitles"
repository = "https://github.com/gwen-lg/subtile"
authors = ["Eric Kidd <git@randomhacks.net>", "Gwen Lg <me@gwenlg.fr>"]
keywords = ["subtitle", "library", "parse", "vobsub", "pgs"]
categories = [
    "command-line-utilities",
    "encoding",
    "multimedia::encoding",
    "parser-implementations",
]
license = "LGPL-3.0-or-later"
rust-version = "1.80"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = "0.3"
compact_str = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
iter_fixed = "0.4"
log = "0.4"
nom = "8.0"
profiling = "1.0"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
glob = "0.3"

[lints.rust]
missing_docs = "warn"
unused_imports = "warn"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
bind_instead_of_map = "deny"
borrowed_box = "deny"
cast_lossless = "warn"
cast_possible_wrap = "warn"
checked_conversions = "deny"
clone_on_copy = "deny"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_deref_methods = "deny"
extra_unused_lifetimes = "deny"
future_not_send = "warn"
if_not_else = "warn"
into_iter_without_iter = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_let_else = "warn"
map_unwrap_or = "deny"
match_same_arms = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
must_use_candidate = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
nonminimal_bool = "deny"
option_if_let_else = "warn"
or_fun_call = "deny"
pathbuf_init_then_push = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "deny"
string_lit_as_bytes = "warn"
too_long_first_doc_paragraph = "warn"
trivially_copy_pass_by_ref = "deny"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"
unreadable_literal = "deny"
use_self = "deny"
used_underscore_binding = "deny"
useless_conversion = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
